--- a/app/views/recipes/new.html.erb
+++ b/app/views/recipes/new.html.erb
@@ -1,1 +1,14 @@
-<%= render 'form', recipe: @recipe %>
+<%= form_for @recipe do |f| %>
+<%= f.label "Recipe title:" %>
+<%= f.text_field :title%>
+
+<%= f.fields_for :ingredients do |t|%>
+    <%= t.label :name %>
+    <%= t.text_field :name%>
+
+    <%= t.label :quantity %>
+    <%= t.text_field :quantity%>
+<%end%>
+
+<%= f.submit%>
+<% end %>
